--- a/Style/style.css
+++ b/Style/style.css
@@ -20,6 +20,14 @@ header {
 padding: 0.5em 0 1em;
 }
 
+.logo img {
+  transition: filter 0.3s ease-in-out; 
+}
+
+.logo img:hover {
+  filter: drop-shadow(0 0 10px rgba(255, 0, 0, 0.8)); 
+}
+
 .topnav {
     overflow: hidden;
     list-style-type: none;
@@ -138,3 +146,4 @@ transition: 100ms;
   height: 100%;
   align-self: flex-end;  
 }
+
